--- a/SouthsideLawnCare/Site.Master
+++ b/SouthsideLawnCare/Site.Master
@@ -44,6 +44,10 @@
 	
     <body id="body">
 
+        	<form id="mainform" runat="server">
+            <asp:ScriptManager ID="scm1" runat="server">
+                        </asp:ScriptManager>
+
 		<!-- preloader -->
 		<div id="preloader">
             <div class="loder-box">
@@ -108,14 +112,14 @@
 							<p>Sign Up For Newsletter</p>
 							<p>Get Cool Stuff! We hate spam!</p>
 						</div>
-						<form action="#" method="post" class="subscribe-form wow animated fadeInUp">
+						<div class="subscribe-form wow animated fadeInUp">
 							<div class="input-field">
 								<input type="email" class="subscribe form-control" placeholder="Enter Your Email...">
 								<button type="submit" class="submit-icon">
 									<i class="fa fa-paper-plane fa-lg"></i>
 								</button>
 							</div>
-						</form>
+						</div>
 						<div class="footer-social">
 							<ul>
 								<li class="wow animated zoomIn"><a href="#"><i class="fa fa-thumbs-up fa-3x"></i></a></li>
@@ -155,5 +159,9 @@
         <script src="scripts/wow.min.js"></script>
 		<!-- Custom Functions -->
         <script src="scripts/main.js"></script>
+
+
+
+                </form>
     </body>
 </html>
