--- a/SouthsideLawnCare/Site.Master
+++ b/SouthsideLawnCare/Site.Master
@@ -1,4 +1,4 @@
-﻿
+﻿<%@ Master Language="C#" CodeBehind="Site.Master.cs" Inherits="SouthsideLawnCare.SiteMaster" AutoEventWireup="true" %>
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -111,16 +111,15 @@
 				<div class="row text-center">
 					<div class="footer-content">
 						<div class="wow animated fadeInDown">
-							<p>Sign Up For Newsletter</p>
-							<p>Get Cool Stuff! We hate spam!</p>
+							<p>In A Hurry?</p>
+							<p>Enter your email address below and we will get back to you!</p>
 						</div>
 						<div class="subscribe-form wow animated fadeInUp">
 							<div class="input-field">
-                                <asp:TextBox CssClass="subscribe form-control" runat="server" placeholder="Enter Your Email..."></asp:TextBox>
-                                <asp:Button CssClass="submit-icon" ID="btnSubmit" runat="server" />
-								<button type="submit" class="submit-icon">
-									<i class="fa fa-paper-plane fa-lg"></i>
-								</button>
+                                <asp:TextBox CssClass="subscribe form-control" runat="server" placeholder="Enter Your Email..." ID="txtEmail"></asp:TextBox>
+                                 <asp:RequiredFieldValidator ID="rfvEmail" CssClass="error" Display="Dynamic" ControlToValidate="txtEmail" ErrorMessage="Please enter your email address" runat="server"></asp:RequiredFieldValidator>
+                                <asp:RegularExpressionValidator ID="revEmail" CssClass="error" Display="Dynamic" runat="server" ControlToValidate="txtEmail" ValidationExpression="^\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$" ErrorMessage="That doesn't look like a valid email"></asp:RegularExpressionValidator>
+                                <asp:LinkButton ID="btnSubmit" runat="server" CssClass="submit-icon" OnClick="btnSubmit_Click" CausesValidation="true"><i class="fa fa-paper-plane fa-lg"></i></asp:LinkButton>
 							</div>
 						</div>
 						<div class="footer-social">
@@ -133,7 +132,7 @@
 							</ul>
 						</div>
 						
-						<p>Copyright &copy; 2014-2015 Design and Developed By<a href="http://www.themefisher.com">Themefisher</a> </p>
+						<!--<p>Copyright &copy; 2014-2015 Design and Developed By<a href="http://www.themefisher.com">Themefisher</a> </p>-->
 					</div>
 				</div>
 			</div>
